@@ -34,10 +34,10 @@ main (int argc, char **argv)
 
 	initialise_connection (app);
 
+	ui_init (app);
 	icon_init (app);
 	construct_menu (app);
 	tray_icon_init (app);
-	ui_init (app);
 
 	reconnect_phone (app);
 	gtk_main ();
