@@ -9,9 +9,9 @@ gchar *s = N_("_Reply");
 gchar *s = N_("<span weight=\"bold\" size=\"larger\">Your mobile phone has received a message.</span>");
 gchar *s = N_("date and time of message");
 gchar *s = N_("sender name and number");
-gchar *s = N_("<span weight=\"bold\">Date</span>");
 gchar *s = N_("<span weight=\"bold\">Sender</span>");
 gchar *s = N_("message contents");
+gchar *s = N_("<span weight=\"bold\">Date</span>");
 gchar *s = N_("Phone Manager Preferences");
 gchar *s = N_("Use Bluetooth wireless networking to connect to your phone");
 gchar *s = N_("Bluetooth");
